[b] 750 - Fix gradient looking weird on Safari
[#164289750] https://www.pivotaltracker.com/story/show/164289750

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -45,7 +45,7 @@ $torchRed: #F9001E
 $boulder: #767676
 $hawkes-blue: #ccdffd
 $black20-color: rgba(0, 0, 0, 0.2)
-$transparent-color: rgba(0, 0, 0, 0.0)
+$black0-color: rgba(255, 255, 255, 0)
 
 // URL DEFINITION
 
